# nexussy

./: .gitignore  AGENTS.md  BROWSER_HARNESS_NOTES.md  CHANGELOG.md  CIRCULAR_DEVELOPMENT.md  DEEP_CODE_REVIEW.md  Dockerfile  FULL_SPEC_REMAINING.md  Makefile  OPERATIONS.md  README.md  SPEC.md  SPEC_COVERAGE.md  TRIAGE.md  devplan.md  handoff.md  install.sh  launch_verify.sh  nexussy.sh  ops_tests.sh  phase001.md
.github/workflows/: ci.yml  (+1 more)
core/: pyproject.toml  requirements.txt
core/nexussy/: __init__.py  audit.py  checkpoint.py  config.py  db.py  mcp.py  providers.py  security.py  session.py
core/nexussy/api/: schemas.py  server.py
core/nexussy/artifacts/: store.py
core/nexussy/assets/design_packs/: linear.md  minimal.md  stripe.md
core/nexussy/cli/: __init__.py  costs.py
core/nexussy/pipeline/: STAGES_ARCHITECTURE.md  engine.py  helpers.py
core/nexussy/pipeline/stages/: design.py  develop.py  interview.py  plan.py  review.py  validate.py  validate_browser.py
core/nexussy/swarm/: gitops.py  local_pi_worker.py  locks.py  pi_rpc.py  pi_shim.py  project_graph.py  roles.py
core/tests/: conftest.py  test_core_contract.py  test_cost_analytics.py  test_design_packs.py  test_devplan_contract.py  test_interview.py  test_interview_graph_context.py  test_local_pi_worker.py  test_project_graph.py  test_review_core_fixes.py  test_role_capabilities.py  test_spawn_permissions.py  test_validate_browser.py  test_worker_permission_sse.py
scripts/: smoke_integration.sh  test_smoke_parser.sh
tui/: QA.md  UX_REWRITE_PLAN.md  package.json  tsconfig.json
web/: app.js  index.html  pyproject.toml  requirements.txt  style.css
web/fixtures/: contract-events.json
web/nexussy_web/: __init__.py  app.py
web/nexussy_web/static/: anchors.js  app.js  style.css
web/nexussy_web/templates/: index.html
web/tests/: test_app.py
(+47 files in other folders)
