[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussy-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["starlette>=0.37,<1.0", "uvicorn>=0.29", "pydantic>=2.7", "PyYAML>=6", "aiosqlite>=0.20", "litellm>=1.0"]

[tool.setuptools.packages.find]
include = ["nexussy*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
