[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussy-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["starlette>=0.37,<1.0", "uvicorn>=0.29", "pydantic>=2.7", "PyYAML>=6", "litellm>=1.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["nexussy*"]

[project.scripts]
nexussy-pi = "nexussy.swarm.pi_shim:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F"]
ignore = []
exclude = ["tests/", "core/nexussy/swarm/local_pi_worker.py", "nexussy/swarm/local_pi_worker.py"]
