[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussy-web"
version = "0.1.0"
description = "Starlette dashboard and proxy for nexussy"
requires-python = ">=3.11"
dependencies = ["starlette>=0.37,<1.0", "uvicorn>=0.29", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexussy_web*"]

[tool.setuptools.package-data]
nexussy_web = ["templates/*.html", "static/*.js", "static/*.css"]
